Refactor hero section and adjust container styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.hidden {
+  display: none;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -319,15 +323,13 @@ img {
 /*#region Hero*/
 
 .section-hero {
-  max-width: 320px;
-  margin: 0 auto;
   padding: 72px 0;
 
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero-mobile.jpg);
+    url(../images/hero-desktop.jpg);
   background-color: #2e2f42;
   background-size: cover;
   background-repeat: no-repeat;
@@ -345,7 +347,7 @@ img {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero-mobile@2x.jpg);
+      url(../images/hero-desktop@2x.jpg);
   }
 }
 
@@ -366,27 +368,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .section-hero {
-    max-width: 768px;
     padding: 112px 0;
-
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/hero-tablet.jpg);
-  }
-
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx),
-    screen and (min-resolution: 2x) {
-    .section-hero {
-      background-image: linear-gradient(
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
-        url(../images/hero-tablet@2x.jpg);
-    }
   }
 
   .hero-title {
@@ -405,25 +387,7 @@ img {
   .section-hero {
     max-width: 1440px;
     padding: 188px 0;
-
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/hero-desktop.jpg);
-  }
-
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx),
-    screen and (min-resolution: 2x) {
-    .section-hero {
-      background-image: linear-gradient(
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
-        url(../images/hero-desktop@2x.jpg);
-    }
+    margin: 0 auto;
   }
 
   .hero-title {
@@ -499,7 +463,7 @@ img {
 }
 
 .team-container {
-  max-width: 296px;
+  padding: 0 28px;
 }
 
 .team-list {
@@ -532,7 +496,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .team-container {
-    max-width: 584px;
+    padding: 0 108px;
   }
 
   .team-list {
@@ -548,7 +512,7 @@ img {
 
 @media screen and (min-width: 1158px) {
   .team-container {
-    max-width: 1158px;
+    padding: 0 15px;
   }
   .team-item {
     width: calc((100% - 72px) / 4);
@@ -745,7 +709,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .footer-container {
-    max-width: 584px;
+    padding: 0 108px;
     align-items: baseline;
   }
 
@@ -768,7 +732,7 @@ img {
   }
 
   .footer-container {
-    max-width: 1158px;
+    padding: 0 15px;
     gap: 0;
   }
 
