--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-.hidden {
-  display: none;
-}
-
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -323,13 +319,15 @@ img {
 /*#region Hero*/
 
 .section-hero {
+  max-width: 320px;
+  margin: 0 auto;
   padding: 72px 0;
 
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero-desktop.jpg);
+    url(../images/hero-mobile.jpg);
   background-color: #2e2f42;
   background-size: cover;
   background-repeat: no-repeat;
@@ -347,7 +345,7 @@ img {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero-desktop@2x.jpg);
+      url(../images/hero-mobile@2x.jpg);
   }
 }
 
@@ -368,7 +366,27 @@ img {
 
 @media screen and (min-width: 768px) {
   .section-hero {
+    max-width: 768px;
     padding: 112px 0;
+
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-tablet.jpg);
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx),
+    screen and (min-resolution: 2x) {
+    .section-hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-tablet@2x.jpg);
+    }
   }
 
   .hero-title {
@@ -387,7 +405,25 @@ img {
   .section-hero {
     max-width: 1440px;
     padding: 188px 0;
-    margin: 0 auto;
+
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-desktop.jpg);
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx),
+    screen and (min-resolution: 2x) {
+    .section-hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-desktop@2x.jpg);
+    }
   }
 
   .hero-title {
@@ -462,18 +498,15 @@ img {
   background-color: #f4f4fd;
 }
 
-.team-container {
-  padding: 0 28px;
-}
-
 .team-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 72px;
 }
 
 .team-item {
-  width: 100%;
+  width: 264px;
   border-radius: 0 0 4px 4px;
   background-color: #fff;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
@@ -495,24 +528,16 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .team-container {
-    padding: 0 108px;
-  }
-
   .team-list {
     display: flex;
     flex-wrap: wrap;
     gap: 64px 24px;
   }
-
-  .team-item {
-    width: calc((100% - 24px) / 2);
-  }
 }
 
 @media screen and (min-width: 1158px) {
   .team-container {
-    padding: 0 15px;
+    max-width: 1158px;
   }
   .team-item {
     width: calc((100% - 72px) / 4);
@@ -709,7 +734,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .footer-container {
-    padding: 0 108px;
+    max-width: 584px;
     align-items: baseline;
   }
 
@@ -732,7 +757,7 @@ img {
   }
 
   .footer-container {
-    padding: 0 15px;
+    max-width: 1158px;
     gap: 0;
   }
 
