--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -8,7 +7,7 @@ body {
 
 /*#region Reset*/
 
-
+ul,
 ol {
   padding: 0;
   margin: 0;
@@ -61,34 +60,14 @@ img {
 
 /*#region Common*/
 
-
 .section {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .container {
-  max-width: 1158px;
+  max-width: 320px;
   margin: 0 auto;
-  padding: 0 15px;
-}
-
-
-@media screen and (max-width: 1157px) {
-  .section {
-    padding: 96px 0;
-  }
-
-  .container {
-    max-width: 768px;
-  }
-}
-
-
-@media screen and (max-width: 700px) {
-  .container {
-    max-width: 320px;
-    padding: 0 16px;
-  }
+  padding: 0 16px;
 }
 
 .logo {
@@ -123,17 +102,6 @@ img {
 .main-btn:hover,
 .main-btn:focus {
   background-color: #404bbf;
-}
-
-
-section h2 {
-  margin-bottom: 72px;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  text-transform: capitalize;
-  color: #2e2f42;
 }
 
 .section-title {
@@ -172,7 +140,6 @@ section h2 {
   width: 40px;
   height: 40px;
 }
-
 .social-link {
   display: flex;
   align-items: center;
@@ -194,6 +161,23 @@ section h2 {
   fill: #f4f4fd;
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .section {
+    padding: 120px 0;
+  }
+
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
+}
+
 /*#endregion Common*/
 
 /*#region Header*/
@@ -212,116 +196,20 @@ section h2 {
 
 .header-logo {
   display: block;
-  padding: 24px 0;
+  padding: 16px 0;
 }
 
 .header-logo .logo-part {
   color: #2e2f42;
 }
 
-.nav-link {
-  display: block;
-  padding: 24px 0;
-
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link.current {
-  position: relative;
-}
-
-.nav-link.current::after {
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  content: '';
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #404bbf;
-}
-
-.header-nav,
-.nav-list,
-.contacts-list {
-  display: flex;
-  align-items: center;
-}
-
-.header-nav {
-  gap: 76px;
-}
-
-.nav-list {
-  gap: 40px;
-}
-
-.contacts {
-  font-style: normal;
-}
-
-.contacts-list {
-  gap: 40px;
-  flex-direction: row;
-}
-
-.contacts-link {
-  display: block;
-  padding: 24px 0;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link:hover,
-.nav-link:focus,
-.nav-link.current,
-.contacts-link:hover,
-.contacts-link:focus {
-  color: #404bbf;
-}
-
-.burger-btn {
-  display: none;
-}
-
-
-@media screen and (max-width: 1100px) {
-  .header-nav {
-    gap: 120px;
-  }
-
-  .contacts-list {
-    gap: 12px;
-    flex-direction: column;
-  }
-
-  .contacts-link {
-    padding: 0;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-  }
-}
-
 @media screen and (max-width: 767px) {
-  .header-logo {
-    padding: 16px 0;
-  }
-
   .nav-list,
   .contacts {
     display: none;
   }
 
   .burger-btn {
-    display: block;
     background-color: transparent;
     border: none;
   }
@@ -331,26 +219,123 @@ section h2 {
     fill: #2f2f37;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .header-logo {
+    padding: 24px 0;
+  }
+
+  .nav-link {
+    display: block;
+    padding: 24px 0;
+
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-link.current {
+    position: relative;
+  }
+
+  .nav-link.current::after {
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    content: '';
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+  }
+
+  .header-nav,
+  .nav-list,
+  .contacts-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-nav {
+    gap: 120px;
+  }
+
+  .nav-list {
+    gap: 40px;
+  }
+
+  .contacts {
+    font-style: normal;
+  }
+
+  .contacts-list {
+    gap: 12px;
+    flex-direction: column;
+  }
+
+  .contacts-link {
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-link:hover,
+  .nav-link:focus,
+  .nav-link.current,
+  .contacts-link:hover,
+  .contacts-link:focus {
+    color: #404bbf;
+  }
+
+  .burger-btn {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .header-nav {
+    gap: 76px;
+  }
+
+  .contacts-list {
+    gap: 40px;
+    flex-direction: row;
+  }
+
+  .contacts-link {
+    padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+}
 /*#endregion Header*/
 
 /*#region Hero*/
 
 .section-hero {
-  max-width: 1440px;
+  max-width: 320px;
   margin: 0 auto;
-  padding: 188px 0;
+  padding: 72px 0;
 
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero-desktop.jpg);
+    url(../images/hero-mobile.jpg);
   background-color: #2e2f42;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
+/* Тут я зробив через кому альтернативні варіанти
+ медіа правил які можуть використовувати студенти */
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx),
@@ -360,16 +345,16 @@ section h2 {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero-desktop@2x.jpg);
+      url(../images/hero-mobile@2x.jpg);
   }
 }
 
 .hero-title {
-  max-width: 496px;
-  margin: 0 auto 48px;
+  max-width: 216px;
+  margin: 0 auto 72px;
 
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
@@ -379,7 +364,7 @@ section h2 {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1157px) {
+@media screen and (min-width: 768px) {
   .section-hero {
     max-width: 768px;
     padding: 112px 0;
@@ -405,20 +390,27 @@ section h2 {
   }
 
   .hero-title {
+    max-width: 496px;
     margin-bottom: 36px;
+
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1158px) {
   .section-hero {
-    max-width: 320px;
-    padding: 72px 0;
+    max-width: 1440px;
+    padding: 188px 0;
 
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero-mobile.jpg);
+      url(../images/hero-desktop.jpg);
   }
 
   @media screen and (min-device-pixel-ratio: 2),
@@ -430,16 +422,12 @@ section h2 {
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
-        url(../images/hero-mobile@2x.jpg);
+        url(../images/hero-desktop@2x.jpg);
     }
   }
 
   .hero-title {
-    max-width: 216px;
-    margin-bottom: 72px;
-
-    font-size: 36px;
-    line-height: 1.11;
+    margin-bottom: 48px;
   }
 }
 /*#endregion Hero*/
@@ -452,35 +440,24 @@ section h2 {
 }
 
 .benefits-item {
-  width: calc((100% - 72px) / 4);
-}
-
-.benefits-icon-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-  height: 112px;
-  margin-bottom: 8px;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  background-color: #f4f4fd;
-}
-
-
-.benefits-zagolovok {
-  text-align: center;
 }
 
 .benefits-subtitle {
-  text-align: left;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .benefits-item {
+    width: calc((100% - 72px) / 2);
+  }
+
+  .benefits-subtitle {
+    text-align: left;
+  }
 }
 
 @media screen and (max-width: 1157px) {
-  .benefits-item {
-    width: calc((100% - 24px) / 2);
-  }
-
   .benefits-icon-wrapper {
     display: none;
   }
@@ -496,13 +473,20 @@ section h2 {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1158px) {
   .benefits-item {
-    width: 100%;
+    width: calc((100% - 72px) / 4);
   }
-
-  .benefits-subtitle {
-    text-align: center;
+  .benefits-icon-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 112px;
+    margin-bottom: 8px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    background-color: #f4f4fd;
   }
 }
 
@@ -514,18 +498,14 @@ section h2 {
   background-color: #f4f4fd;
 }
 
-.team-container {
-  max-width: 1158px;
-}
-
 .team-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 64px 24px;
+  gap: 72px;
 }
 
 .team-item {
-  width: calc((100% - 72px) / 4);
+  width: 100%;
   border-radius: 0 0 4px 4px;
   background-color: #fff;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
@@ -546,9 +526,11 @@ section h2 {
   justify-content: center;
 }
 
-@media screen and (max-width: 1157px) {
-  .team-container {
-    max-width: 584px;
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 64px 24px;
   }
 
   .team-item {
@@ -556,17 +538,9 @@ section h2 {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .team-container {
-    max-width: 296px;
-  }
-
-  .team-list {
-    gap: 72px;
-  }
-
+@media screen and (min-width: 1158px) {
   .team-item {
-    width: 100%;
+    width: calc((100% - 72px) / 4);
   }
 }
 /*#endregion Team*/
@@ -576,18 +550,11 @@ section h2 {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 48px 24px;
+  gap: 48px;
 }
 
 .portfolio-item {
-  width: calc((100% - 48px) / 3);
-  box-shadow: none;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-item:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  width: 100%;
 }
 
 .portfolio-thumb {
@@ -622,25 +589,39 @@ section h2 {
   border-top: none;
 }
 
-@media screen and (max-width: 1157px) {
+@media screen and (min-width: 768px) {
   .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
     gap: 72px 24px;
   }
 
   .portfolio-item {
     width: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (max-width: 1157px) {
+  .portfolio-item {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
       0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1158px) {
   .portfolio-list {
-    gap: 48px;
+    gap: 48px 24px;
   }
 
   .portfolio-item {
-    width: 100%;
+    width: calc((100% - 48px) / 3);
+    box-shadow: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .portfolio-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+      0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   }
 }
 
@@ -648,21 +629,14 @@ section h2 {
 
 /*#region Footer*/
 .page-footer {
-  padding: 100px 0;
+  padding: 96px 0;
   background-color: #2e2f42;
 }
 
 .footer-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 0;
-  max-width: 1158px;
-  align-items: baseline;
-}
-
-.footer-logo-wrapper {
-  max-width: 264px;
-  margin-right: 120px;
+  gap: 72px 24px;
 }
 
 .footer-logo {
@@ -700,19 +674,14 @@ section h2 {
   background-color: #31d0aa;
 }
 
-.footer-subscribe-wrapper {
-  margin-left: auto;
-}
-
 .footer-subscribe-form {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  gap: 24px;
+  gap: 16px;
 }
 
 .footer-subscribe-input {
-  width: 264px;
+  width: 288px;
   height: 40px;
   padding: 0 16px;
   border: 1px solid #ffffff;
@@ -751,23 +720,9 @@ section h2 {
   fill: #fff;
 }
 
-@media screen and (max-width: 1157px) {
-  .page-footer {
-    padding: 96px 0;
-  }
-
-  .footer-container {
-    max-width: 584px;
-    gap: 72px 24px;
-  }
-
-  .footer-logo-wrapper {
-    margin-right: 0;
-  }
-
-  .footer-subscribe-wrapper {
-    margin-left: 0;
-  }
+.footer-subscribe-form,
+.footer-container {
+  justify-content: center;
 }
 
 @media screen and (max-width: 767px) {
@@ -775,18 +730,38 @@ section h2 {
   .footer-title {
     text-align: center;
   }
+}
 
-  .footer-subscribe-form,
-  .footer-container {
-    justify-content: center;
+@media screen and (min-width: 768px) {
+  .footer-logo-wrapper {
+    max-width: 264px;
   }
 
   .footer-subscribe-form {
-    gap: 16px;
+    align-items: center;
+    gap: 24px;
+  }
+  .footer-subscribe-input {
+    width: 264px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .page-footer {
+    padding: 100px 0;
   }
 
-  .footer-subscribe-input {
-    width: 288px;
+  .footer-container {
+    max-width: 1158px;
+    gap: 0;
+  }
+
+  .footer-logo-wrapper {
+    margin-right: 120px;
+  }
+
+  .footer-subscribe-wrapper {
+    margin-left: auto;
   }
 }
 
@@ -822,9 +797,9 @@ section h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 408px;
+  width: 288px;
   min-height: 584px;
-  padding: 72px 24px 24px;
+  padding: 72px 16px 24px;
   border-radius: 4px;
 
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
@@ -1008,16 +983,16 @@ section h2 {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .modal {
-    width: 288px;
-    padding-left: 16px;
-    padding-right: 16px;
+    width: 408px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 /*#endregion Modal*/
 
-/*#region Mobile Menu*/
+/*#region Modal*/
 
 .mobile-menu {
   position: fixed;
@@ -1043,8 +1018,10 @@ section h2 {
 
 .mobile-menu-container {
   position: relative;
+  padding-left: 16px;
   padding-top: 72px;
   padding-bottom: 40px;
+  padding-right: 24px;
 
   display: flex;
   flex-direction: column;
@@ -1108,4 +1085,4 @@ section h2 {
   }
 }
 
-/*#endregion Mobile Menu*/
+/*#endregion Modal*/
