--- a/css/styles.css
+++ b/css/styles.css
@@ -182,25 +182,27 @@ img {
 
 /*#region Header*/
 
-.page-header {
-  border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
-}
+@media screen and (min-width: 320px) {
+  .page-header {
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+      0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+  }
 
-.header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
-.header-logo {
-  display: block;
-  padding: 16px 0;
-}
+  .header-logo {
+    display: block;
+    padding: 16px 0;
+  }
 
-.header-logo .logo-part {
-  color: #2e2f42;
+  .header-logo .logo-part {
+    color: #2e2f42;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -498,6 +500,10 @@ img {
   background-color: #f4f4fd;
 }
 
+.team-container {
+  max-width: 296px;
+}
+
 .team-list {
   display: flex;
   flex-wrap: wrap;
@@ -527,6 +533,10 @@ img {
 }
 
 @media screen and (min-width: 768px) {
+  .team-container {
+    max-width: 584px;
+  }
+
   .team-list {
     display: flex;
     flex-wrap: wrap;
@@ -539,6 +549,9 @@ img {
 }
 
 @media screen and (min-width: 1158px) {
+  .team-container {
+    max-width: 1158px;
+  }
   .team-item {
     width: calc((100% - 72px) / 4);
   }
@@ -1023,10 +1036,8 @@ img {
 
 .mobile-menu-container {
   position: relative;
-  padding-left: 16px;
   padding-top: 72px;
   padding-bottom: 40px;
-  padding-right: 24px;
 
   display: flex;
   flex-direction: column;
